od/2.0/et/index.markdown
---
title: Avatud* definitsioon
layout: page
---

Versioon 2.0

Avatud&lowast; definitsioon täpsustab "avatuse" tähendust seoses teadmiste/teadmusega, kultiveerimaks lollikindlat ühisvara, milles võib igaüks osaleda ning teha suurimal võimalikul määral koostööd.

**Kokkuvõte:** *Teadmus on avatud, kui igaüks pääseb sellele vabalt ligi, saab seda vabalt kasutada, täiendada ja jagada — seadmata piiranguid muuks, kui teadmiste algupärasuse ja avatuse tagamiseks.*

See põhitähendus vastab "avatuse" tähendusele seoses tarkvaraga, nagu piiritleb seda [avatud lähtekoodi definitsioon](http://www.opensource.org/docs/osd) ning sellega on samatähenduslik "vaba" või "libre" nagu piiritleb [vabakultuuri teoste definitsioon](http://freedomdefined.org). Avatud&lowast; definitsioon töötati algselt välja lähtuvalt avatud lähtekoodi definitsioonist, mis omakorda põhines [Debiani vabavara suunistel](http://www.debian.org/social_contract).

Terminit **teos** kasutatakse, osutamaks edasiantava teadmuse üksusele või selle osale.

Termin **litsents** osutab õiguslikele tingimustele, mille alusel on teos tehtud kättesaadavaks. Juhul, kui teose litsents on määratlemata, siis tuleb seda tõlgendada kui osutust, et teose kasutust reguleerivad vaikimisi kehtivad õiguslikud tingimused (näiteks autoriõigus või avaliku hüve tingimused).

## 1. Avatud teosed

Avatud **teos** peab selle levitamise puhul rahuldama järgmisi nõudeid:

### 1.1 Avatud litsents

**Teos** *peab* olema tehtud kättesaadavaks avatud **litsentsi** alusel (defineeritud jaotises 2). Mistahes teosega kaasnevad lisatingimused (nagu kasutustingimused või litsentsija vallatavad patendid) *ei tohi* 
olla vastuolus litsentsi tingimustega.

### 1.2 Kättesaadavus

**Teos** on kättesaadav tervikuna ning enimalt mõistliku, ühekordse paljundamise tasu eest, eelistatavalt tasuta allalaaditavana Internetist. Mistahes lisainfo, mis on vajalik litsentsile vastavuse tagamiseks (nagu kaastööliste nimed, mida on vaja autorsuse äramärkimise nõuete täitmiseks) *peavad* olema samuti teosega kaasa pandud.

### 1.3 Avatud vorming

**Teos** *peab* olema tehtud kättesaadavaks käepärases ja täiendatavas vormis viisil, mis välistab tarbetud tehnoloogilised takistused litsentsitud õiguste rakendamiseks. Iseäranis andmed peavad olema masinloetavad, saadaval toormassina ning esitatud avatud vormingus (st vabalt saadaval oleva ja avaldatud spetsifikatsiooniga vormingus, mis ei sea rahalisi ega muid piiranguid selle kasutamisele) või on miinimumjuhul töödeldavad vähemalt ühe tarkvaralise vaba/libre/avatud lähtekoodiga tööriista abil.

## 2. Avatud litsentsid

**Litsents** on avatud, kui selle tingimused vastavad järgmistele nõudmistele:

### 2.1 Nõutavad load

**Litsents** *peab* tagasivõtmatult lubama (või võimaldama) järgmist:

#### 2.1.1 Kasutus

**Litsents** *peab* lubama litsentsitud teose vaba kasutamist.

#### 2.1.2 Edasilevitamine

**Litsents** *peab* lubama litsentsitud teose edasilevitamist, kaasa arvatud selle müüki, olenemata sellest, kas müüakse teost ennast iseseisvalt või osana kogumist, mis on loodud eri allikatest pärit teostest.

#### 2.1.3 Täiendamine

**Litsents** *peab* lubama tuletatud teoste loomist litsentsitud teosest ja lubama selliste tuletatud teoste levitamist samadel tingimustel algse litsentsitud teosega.

#### 2.1.4 Tükeldamine

**Litsents** *peab* lubama teose mistahes osa kasutamist, levitamist või täiendamist eraldiseisvalt teose mistahes muust osast või teoste kogumist, mille koosseisus seda algselt levitati. Kõik osapooled, kes saavad enda valdusse algse litsentsi raames levitatud teose või selle mistahes osa, peavad omama selle suhtes neidsamu õigusi, mis olid määratletud algse teose juures.

#### 2.1.5 Liitmine

**Litsents** *peab* lubama litsentsitud teose levitamist koos teiste sellest eraldiseisvate teostega, seadmata piiranguid neile teistele teostele.

#### 2.1.6 Ühetaolisus

**Litsents** *ei tohi* seada eritingimusi mitte ühelegi isikule ega isikute grupile.

#### 2.1.7 Edasikanduvus

Teosega seotud õigused *peavad* kehtima kõigi jaoks, kellele see on edasilevitatud ilma, et oleks tarvis nõustuda täiendavate õiguslike tingimustega.

#### 2.1.8 Kasutamine mistahes eesmärgil

**Litsents** *peab* lubama kasutamist, edasilevitamist, täiendamist ja liitmist mistahes eesmärgil. Litsents *ei tohi* mitte kellelgi piirata teose kasutamist mistahes eriliseks otstarbeks.

#### 2.1.9 Tasu puudumimne

**Litsents** *ei tohi* oma tingimuste osana kehtestada ühtegi honorari, kasutusmaksu ega muud rahalist tasu või hüvitist.

### 2.2 Vastuvõetavad tingimused

**Litsents** ei piira, muuda ebaselgeks ega vähenda muul viisil õigusi, mis on nõutud jaotises 2.1 välja arvatud järgmistel lubatud tingimustel:

#### 2.2.1 Omistamine

**Litsents** *võib* nõuda levitatud teose puhul, et sellega oleks pandud kaasa kaastööliste, õiguste valdajate, sponsorite või teostajate nimekiri, kuni mistahes selline ettekirjutus ei ole koormav.

#### 2.2.2 Terviklus

**Litsents** *võib* nõuda, et litsentsitud teose täiendus kannaks algsest teosest erinevat nime või versioonitähist või märgiks muul viisil ära, mis muudatused on teosesse tehtud.

#### 2.2.3 Jagamine samal alusel

**Litsents** *võib* nõuda, et litsentsitud teose koopiad või tuletatud teosed kannaksid algse teosega sama või samaväärset litsentsi.

#### 2.2.4 Märkused

**Litsents** *võib* nõuda autoriõiguse märkuste või litsentsimärgistuse säilitamist.

#### 2.2.5 Allikad

**Litsents** *võib* nõuda, et täiendatud teosed oleks tehtud kättesaadavaks vormis, mis soosib edasiste täienduste tegemist.

#### 2.2.6 Tehniliste piirangute keeld

**Litsents** *võib* keelata teose levitamist viisil, mis rakendab normaaljuhul lubatud õiguste teostamise takistamiseks tehnilisi meetmeid.

#### 2.2.7 Tõkestamatus

**Litsents** *võib* nõuda täiendajailt, et need annaksid avalikkusele täiendavaid õigusi (näiteks patendi kasutamise loa), kui seda on vaja litsentsis lubatud õiguste teostamiseks. Litsents võib ühtlasi seada õiguste tingimuseks, et litsentsisaajaid ei tõkestataks nende mistahes lubatud õiguste teostamisel (näiteks patendivaidluste algatamisega).

&lowast; Algne definitsioon kandis nimetust "avatud teadmuse definitsioon" (_open knowledge definition_), mille lühendamise teel on saadud praegune nimekuju (_open definition_). Kuna "avatud definitsioon" ja "avatuse definitsioon" kumbki ei anna edasi kõiki taotletud konnotatsioone, siis on valdkonnast šnitti võtva loomingulise tõlkena pakutud nimekuju "avatud&lowast; definitsioon", kus &lowast; viitab nii käesolevale allmärkusele kui osutab ka sellele, et see defineerib "avatust" seoses määramata hulga valdkondadega, st esineb _wildcard_'i tähenduses.

_Translated by [Märt Põder](https://twitter.com/trtram)_
