od/2.1/et/index.markdown
---
layout: page
title: Avatud teadmuse definitsioon 2.1
---

Versioon 2.1

Avatud teadmuse definitsioon täpsustab "avatuse" tähendust seoses teadmiste ja teadmusega, kultiveerimaks töökindlat ühisvara, milles võib igaüks osaleda ning teha suurimal võimalikul määral koostööd.

**Kokkuvõte:** *Teadmus on avatud, kui igaüks pääseb sellele vabalt ligi, saab seda vabalt kasutada, täiendada ning jagada — seadmata piiranguid muuks, kui teadmiste allikapärasuse ja avatuse tagamiseks.*

See põhitähendus vastab "avatuse" tähendusele seoses tarkvaraga, nagu piiritleb seda [avatud lähtekoodi definitsioon](https://en.wikipedia.org/wiki/The_Open_Source_Definition) ning sellega on samatähenduslik "vaba" või "libre" nagu piiritleb [vabavara definitsioon](https://en.wikipedia.org/wiki/The_Free_Software_Definition) ja [vabakultuuri teoste definitsioon](https://en.wikipedia.org/wiki/Definition_of_Free_Cultural_Works).

Terminit **teos** kasutatakse, osutamaks edasiantava teadmuse üksusele või selle osale.

Termin **litsents** osutab õiguslikele tingimustele, mille alusel on teos tehtud kättesaadavaks.

Termin **avalik omand** osutab autoriõiguse või sarnaste piirangute puudumisele, olgu siis vaikimisi või nende õiguste loovutamise tulemusena.

Võtmelise tähtsusega sõnu "peab", "ei tohi", "peaks" ja "võib" tuleb käesolevas dokumendis tõlgendada nii, nagu neid kirjeldab [RFC2119](https://tools.ietf.org/html/rfc2119).

## 1. Avatud teosed

Avatud **teos** *peab* selle teose levitamisel rahuldama järgmisi nõudeid:

### 1.1 Avatud litsents või seisund

**Teos** *peab* olema **avalikus omandis** või tehtud kättesaadavaks avatud **litsentsi** alusel (defineeritud jaotises 2). Mistahes teosega kaasnevad lisatingimused (nagu kasutustingimused või litsentsija vallatavad patendid) *ei tohi* olla vastuolus teose avaliku omandi seisundi ega litsentsi tingimustega.

### 1.2 Kättesaadavus

**Teos** *peab* olema kättesaadav tervikuna ning enimalt mõistliku, ühekordse paljundamise tasu eest ning *võiks* olla tasuta allalaaditav Internetist. Mistahes lisainfo, mis on vajalik litsentsile vastavuse tagamiseks (nagu kaastööliste nimed, mida on vaja autorsuse äramärkimise nõuete täitmiseks) *peavad* olema samuti teosega kaasa pandud.

### 1.3 Masinloetavus

**Teos** *peab* olema tehtud kättesaadavaks vormis, mis võimaldab seda kergesti töödelda arvutil, kusjuures teose eraldiseisvad osad on lihtsasti ligipääsetavad ning muudetavad.

### 1.4 Avatud vorming

**Teos** *peab* olema tehtud kättesaadavaks avatud vormingus. Avatud vorming on selline vorming, mis ei sea kasutamisele ei rahalisi ega muid piiranguid ning on täielikult töödeldav vähemalt ühe vabal ja avatud lähtekoodil põhineva tööriistaga.

## 2. Avatud litsentsid

**Litsents** *võiks* ühilduda teiste avatud litsentsidega.

**Litsents** on avatud, kui selle tingimused vastavad järgmistele nõudmistele:

### 2.1 Nõutavad load

**Litsents** *peab* tagasivõtmatult lubama (või võimaldama) järgmist:

#### 2.1.1 Kasutus

**Litsents** *peab* lubama litsentsitud teose vaba kasutamist.

#### 2.1.2 Edasilevitamine

**Litsents** *peab* lubama litsentsitud teose edasilevitamist, kaasa arvatud selle müüki, olenemata sellest, kas müüakse teost ennast iseseisvalt või osana kogumist, mis on loodud eri allikatest pärit teostest.

#### 2.1.3 Täiendamine

**Litsents** *peab* lubama tuletatud teoste loomist litsentsitud teosest ja lubama selliste tuletatud teoste levitamist samadel tingimustel algse litsentsitud teosega.

#### 2.1.4 Tükeldamine

**Litsents** *peab* lubama teose mistahes osa kasutamist, levitamist või täiendamist eraldiseisvalt teose mistahes muust osast või teoste kogumist, mille koosseisus seda algselt levitati. Kõik osapooled, kes saavad enda valdusse algse litsentsi raames levitatud teose või selle mistahes osa, *võiks* omada selle suhtes neidsamu õigusi, mis olid määratletud algse teose juures.

#### 2.1.5 Liitmine

**Litsents** *peab* lubama litsentsitud teose levitamist koos teiste sellest eraldiseisvate teostega, seadmata piiranguid neile teistele teostele.

#### 2.1.6 Ühetaolisus

**Litsents** *ei tohi* seada eritingimusi mitte ühelegi isikule ega isikute grupile.

#### 2.1.7 Edasikanduvus

Teosega seotud õigused *peavad* kehtima kõigi jaoks, kellele see on edasilevitatud ilma, et oleks tarvis nõustuda täiendavate õiguslike tingimustega.

#### 2.1.8 Kasutamine mistahes eesmärgil

**Litsents** *peab* lubama kasutamist, edasilevitamist, täiendamist ja liitmist mistahes eesmärgil. Litsents *ei tohi* mitte kellelgi piirata teose kasutamist mistahes eriliseks otstarbeks.

#### 2.1.9 Tasu puudumimne

**Litsents** *ei tohi* oma tingimuste osana kehtestada ühtegi honorari, kasutusmaksu ega muud rahalist tasu või hüvitist.

### 2.2 Vastuvõetavad tingimused

**Litsents** *ei tohi* piirata, muuta ebaselgeks ega vähendada muul viisil õigusi, mis on nõutud jaotises 2.1 välja arvatud järgmistel lubatud tingimustel:

#### 2.2.1 Omistamine

**Litsents** *võib* nõuda levitatud teose puhul, et sellega oleks pandud kaasa kaastööliste, õiguste valdajate, sponsorite või teostajate nimekiri, kuni mistahes selline ettekirjutus ei ole koormav.

#### 2.2.2 Terviklus

**Litsents** *võib* nõuda, et litsentsitud teose täiendus kannaks algsest teosest erinevat nime või versioonitähist või märgiks muul viisil ära, mis muudatused on teosesse tehtud.

#### 2.2.3 Jagamine samal alusel

**Litsents** *võib* nõuda, et levitatud teosed kannaksid teosega sama või samaväärset litsentsi.

#### 2.2.4 Märkused

**Litsents** *võib* nõuda autoriõiguse märkuste või litsentsimärgistuse säilitamist.

#### 2.2.5 Allikad

**Litsents** *võib* nõuda, et teose mistahes levitaja võimaldaks vastuvõtjatele ligipääsu teosele edasiste täienduste tegemiseks soovitatavas vormis.

#### 2.2.6 Tehniliste piirangute keeld

**Litsents** *võib* nõuda, et levitatud teosed ei oleks koormatud mis tahes selliste tehniliste meetmetega, mis võiksid piirata normaaljuhul lubatud õiguste teostamist.

#### 2.2.7 Tõkestamatus

**Litsents** *võib* nõuda täiendajailt, et need annaksid avalikkusele täiendavaid õigusi (näiteks patendi kasutamise loa), kui seda on vaja litsentsis lubatud õiguste teostamiseks. Litsents võib ühtlasi seada õiguste tingimuseks, et litsentsisaajaid ei tõkestataks nende mistahes lubatud õiguste teostamisel (näiteks patendivaidluste algatamisega).

----
*Avatud teadmuse definitsioon tuletati algselt avatud lähtekoodi definitsioonist, mis omakorda tuletati Debiani 

*Avatud teadmuse definitsioon töötati algselt välja lähtuvalt avatud lähtekoodi definitsioonist, mis omakorda põhines [Debiani vabavara suunistel](http://www.debian.org/social_contract) ja seda raamival Debiani ühiskondlikul kokkuleppel, mille väljatöötajateks olid Bruce Perens ja Debiani arendajate kogukond. Bruce võttis hiljem sama teksti aluseks avatud lähtekoodi definitsiooni koostamisel. See definitsioon on oma põhiolemuses nende dokumentide tuletis ja kannab endas nende peamisi põhimõtteid. Vaba tarkvara ideaalide esimeseks edendajaks oli Richard Stallman ja meie jätkame seda.*

_Tõlkinud [Märt Põder](https://twitter.com/trtram)_
